--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_scorez"
    ]
   },
   {
